force-app/main/default/objects/custom_create351__c/custom_create351__c.object-meta.xml
<CustomObject>
    <label>Custom created object351</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects351</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>