force-app/main/default/objects/custom_create351__c/fields/custom_create_351field575__c.field-meta.xml
<CustomField>
    <fullName>custom_create_351field575__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 351field575</label>
    <type>Checkbox</type>
</CustomField>